# rivet

./: .gitignore  Cargo.toml
RivetApp/: Package.swift
RivetApp/Resources/: Info.plist  Rivet.entitlements
RivetApp/Sources/: RivetApp.swift
RivetApp/Sources/Models/: Connection.swift  Credential.swift  TerminalPreference.swift
RivetApp/Sources/Services/: DaemonClient.swift
RivetApp/Sources/ViewModels/: AppViewModel.swift
RivetApp/Sources/Views/: AddConnectionView.swift  AddCredentialView.swift  AddGroupView.swift  ConnectionDetailView.swift  ConnectionListView.swift  CredentialListView.swift  GroupDetailView.swift  QuickCommandView.swift  RivetBranding.swift  SettingsView.swift  TunnelListView.swift  VaultUnlockView.swift  WorkflowListView.swift
ShellyApp/: Package.swift
ShellyApp/Sources/: ShellyApp.swift
ShellyApp/Sources/Models/: Connection.swift
ShellyApp/Sources/Services/: DaemonClient.swift
ShellyApp/Sources/ViewModels/: AppViewModel.swift
ShellyApp/Sources/Views/: ConnectionDetailView.swift  ConnectionListView.swift  GroupDetailView.swift  QuickCommandView.swift  TunnelListView.swift  VaultUnlockView.swift  WorkflowListView.swift
branding/: README.md
crates/rivet-cli/: Cargo.toml
crates/rivet-cli/src/: client.rs  main.rs  prefix.rs
crates/rivet-cli/src/commands/: conn.rs  cred.rs  daemon.rs  exec.rs  group.rs  mod.rs  scp.rs  tunnel.rs  vault.rs  workflow.rs
crates/rivet-core/: Cargo.toml
crates/rivet-core/src/: connection.rs  credential.rs  error.rs  lib.rs  protocol.rs  workflow.rs
crates/rivet-daemon/: Cargo.toml
crates/rivet-daemon/src/: handlers.rs  lib.rs  main.rs  server.rs  state.rs
crates/rivet-mcp/: Cargo.toml
crates/rivet-mcp/src/: client.rs  main.rs  tools.rs
crates/rivet-ssh/: Cargo.toml
crates/rivet-ssh/src/: auth.rs  error.rs  handler.rs  lib.rs  session.rs  transfer.rs  tunnel.rs
crates/rivet-vault/: Cargo.toml
crates/rivet-vault/src/: crypto.rs  import.rs  lib.rs  models.rs  store.rs
crates/shelly-cli/: Cargo.toml
crates/shelly-cli/src/: client.rs  main.rs  prefix.rs
crates/shelly-cli/src/commands/: conn.rs  daemon.rs  exec.rs  group.rs  mod.rs  scp.rs  tunnel.rs  vault.rs  workflow.rs
crates/shelly-core/: Cargo.toml
crates/shelly-core/src/: connection.rs  error.rs  lib.rs  protocol.rs  workflow.rs
crates/shelly-daemon/: Cargo.toml
crates/shelly-daemon/src/: handlers.rs  main.rs  server.rs  state.rs
crates/shelly-mcp/: Cargo.toml
crates/shelly-mcp/src/: client.rs  main.rs  tools.rs
crates/shelly-ssh/: Cargo.toml
crates/shelly-ssh/src/: auth.rs  error.rs  handler.rs  lib.rs  session.rs  transfer.rs  tunnel.rs
crates/shelly-vault/: Cargo.toml
crates/shelly-vault/src/: crypto.rs  import.rs  lib.rs  models.rs  store.rs
docs/superpowers/plans/: 2026-03-27-credentials-manager.md
docs/superpowers/specs/: 2026-03-26-shelly-design.md  2026-03-27-credentials-manager-design.md
scripts/: build-dmg.sh
tests/: integration_test.rs  smoke_test.rs
