[workspace]
resolver = "2"
members = [
    "crates/shelly-core",
    "crates/shelly-vault",
    "crates/shelly-ssh",
    "crates/shelly-daemon",
    "crates/shelly-cli",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
