[package]
name = "shelly-workspace-tests"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/shelly-core",
    "crates/shelly-vault",
    "crates/shelly-ssh",
    "crates/shelly-daemon",
    "crates/shelly-cli",
]

[dependencies]
shelly-core = { path = "crates/shelly-core" }
shelly-vault = { path = "crates/shelly-vault" }
shelly-ssh = { path = "crates/shelly-ssh" }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tempfile = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
