[package]
name = "rivet-workspace-tests"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/rivet-core",
    "crates/rivet-vault",
    "crates/rivet-ssh",
    "crates/rivet-daemon",
    "crates/rivet-cli",
    "crates/rivet-mcp",
]

[dependencies]
rivet-core = { path = "crates/rivet-core" }
rivet-vault = { path = "crates/rivet-vault" }
rivet-ssh = { path = "crates/rivet-ssh" }
rivet-daemon = { path = "crates/rivet-daemon" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tempfile = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
serde_yaml = "0.9"
