[package]
name = "rivet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rivet-core = { path = "../rivet-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
comfy-table = "7"
rpassword = "7"
libc = "0.2"
serde_yaml = { workspace = true }

[[bin]]
name = "rivet"
path = "src/main.rs"
