[package]
name = "rivet-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rivet-mcp"
path = "src/main.rs"

[dependencies]
rivet-core = { path = "../rivet-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
