[package]
name = "rivet-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
rivet-core = { path = "../rivet-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
