[package]
name = "shelly-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
shelly-core = { path = "../shelly-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
comfy-table = "7"
rpassword = "7"
libc = "0.2"

[[bin]]
name = "shelly"
path = "src/main.rs"
