[package]
name = "shelly-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shellyd"
path = "src/main.rs"

[dependencies]
shelly-core = { path = "../shelly-core" }
shelly-vault = { path = "../shelly-vault" }
shelly-ssh = { path = "../shelly-ssh" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde_yaml = { workspace = true }
