[package]
name = "shelly-ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
shelly-core = { path = "../shelly-core" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
russh = "0.58"
russh-sftp = "2.1"

[dev-dependencies]
tokio = { workspace = true }
